[FSTORE-312] fix data links and documentation updates (#327)
* fix data links and documentation updates

--- a/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "This notebooks guides through the ingestion of Redshift data in the Hopsworks feature store. To follow this notebook users should have an existing Redshift cluster, if not, they can follow the AWS [documentation](https://docs.aws.amazon.com/ses/latest/DeveloperGuide/event-publishing-redshift-cluster.html).\n",
     "\n",
-    "The data for this tutorial is available in CSV format [here](../data/Sacramentorealestatetransactions.csv)\n",
+    "We use the widely used Telco Customer Churn dataset for this tutorial, which is available in CSV format [here](https://repo.hops.works/master/hopsworks-tutorials/data/Telco_customer_churn.csv).\n",
     "Users should create the following table in Redshift\n",
     "```sql\n",
     "CREATE TABLE telco(\n",
@@ -51,26 +51,27 @@
     "and populate the table using the copy command:\n",
     "```sql\n",
     "COPY telco\n",
-    "FROM 's3://bucket/telco_customer_churn.csv'\n",
+    "FROM 's3://bucket/Telco_customer_churn.csv'\n",
     "IAM_ROLE 'arn:aws:iam::xxxxxxxxx:role/role_name'\n",
     "FORMAT as CSV\n",
+    "IGNOREHEADER 1 --for csv with headers\n",
     "FILLRECORD\n",
     "```\n",
-    "\n",
-    "Once the data has been imported into Redshift, we can start ingesting it into the Hopsworks Feature Store. \n",
+    "Redshift needs the IAM_ROLE with access to read your S3 bucket. This can be added to the IAM_ROLE permissions settings before launching the database, if not already done.\n",
+    "Once the data has been imported into Redshift, we can start ingesting it into the Hopsworks Feature Store.\n",
     "\n",
     "<h3 style=\"color: #1EB382;font-weight: bold;\">Storage Connector</h3>\n",
     "\n",
     "The first step to be able to ingest Redshift data into the feature store is to configure a storage connector.The Redshift connector requires you to specify the following properties. Most of them are available in the properties area of your cluster in the Redshift UI.\n",
     "\n",
     "\n",
-    "<img src=\"images/connector_ui.png\" alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
+    "<img src=\"images/redshift_creation.png\" alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
     "\n",
     "- Cluster identifier: The name of the cluster\n",
     "\n",
     "- Database driver: You can use the default JDBC Redshift Driver `com.amazon.redshift.jdbc42.Driver` (More on this later)\n",
     "\n",
-    "- Database endpoint: The endpoint for the database. Should be in the format of `[UUID].eu-west-1.redshift.amazonaws.com`\n",
+    "- Database endpoint: The endpoint for the database (without the cluster identifier). Should be in the format of `[UUID].eu-west-1.redshift.amazonaws.com`\n",
     "\n",
     "- Database name: The name of the database to query\n",
     "\n",
@@ -80,9 +81,9 @@
     "The second option is to configure an IAM role. With IAM roles,  Jobs or notebooks launched on Hopsworks  do not need to explicitly authenticate with Redshift, as the HSFS library will transparently use the IAM role to acquire a temporary credential to authenticate the specified user. \n",
     "In Hopsworks, there are two different ways to configure an IAM role: a per-cluster IAM role or a federated IAM role (role chaining). For the per-cluster IAM role, you select an instance profile for your Hopsworks cluster when launching it in hopsworks.ai, and all jobs or notebooks will be run with the selected IAM role.  For the federated IAM role, you create a head IAM role for the cluster that enables Hopsworks to assume a potentially different IAM role in each project. You can even restrict it so that only certain roles within a project (like a data owner) can assume a given role. \n",
     "\n",
-    "With regards to the database driver, the library to interact with Redshift *is not* included in Hopsworks - you need to upload the driver yourself. First, you need to download the library from  here. You then upload the driver files to the “Resources” dataset in your project. Then, you add the file to your notebook or job before launching it, as shown in the screenshots below.\n",
+    "With regards to the database driver, the library to interact with Redshift `redshift-jdbc42` is included in Hopsworks, so that you do not need to upload the driver yourself. However, if you wish to use another driver or version you will have to upload the driver first to a dataset in your Project, e.g. “Resources” dataset. Then, you add the file to your notebook or job before launching it.\n",
     "\n",
-    "The library can be downloaded here: https://docs.aws.amazon.com/redshift/latest/mgmt/configure-jdbc-connection.html#download-jdbc-driver"
+    "The library can be downloaded from [here](https://docs.aws.amazon.com/redshift/latest/mgmt/jdbc20-download-driver.html)"
    ]
   },
   {
@@ -135,10 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "telco_on_dmd = fs.create_on_demand_feature_group(name=\"telco_redshift\",\n",
-    "                                                version=2,\n",
+    "telco_on_dmd = fs.create_external_feature_group(name=\"telco_redshift\",\n",
+    "                                                version=1,\n",
     "                                                query=\"select * from telco\",\n",
-    "                                                description=\"On-demand feature group for telecom customer data\",\n",
+    "                                                description=\"External feature group for telecom customer data\",\n",
     "                                                storage_connector=redshift_conn,\n",
     "                                                statistics_config=True)"
    ]
@@ -193,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On-demand feature groups can also be joined with cached feature groups in Hopsworks to create training datasets. [This helper guide](https://docs.hopsworks.ai/feature-store-api/latest/generated/query_vs_dataframe/) explains in detail how the HSFS joining APIs work and how they can be used to create training datasets.\n",
+    "External feature groups can also be joined with cached feature groups in Hopsworks to create training datasets. [This helper guide](https://docs.hopsworks.ai/feature-store-api/latest/generated/query_vs_dataframe/) explains in detail how the HSFS joining APIs work and how they can be used to create training datasets.\n",
     "\n",
     "If, however, Redshift contains raw data that needs to be feature engineered, you can retrieve a Spark DataFrame backed by the Redshift table using the HSFS API."
    ]
@@ -276,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Storing feature groups as cached feature groups within Hopsworks provides several benefits over on-demand feature groups. First it allows users to leverage Hudi for incremental ingestion (with ACID properties, ensuring the integrity of the feature group) and time travel capabilities. As new data is ingested, new commits are tracked by Hopsworks allowing users to see what has changed over time. On each commit, statistics are computed and tracked in Hopsworks, allowing users to understand how the data has changed over time.\n",
+    "Storing feature groups as cached feature groups within Hopsworks provides several benefits over external feature groups. First it allows users to leverage Hudi for incremental ingestion (with ACID properties, ensuring the integrity of the feature group) and time travel capabilities. As new data is ingested, new commits are tracked by Hopsworks allowing users to see what has changed over time. On each commit, statistics are computed and tracked in Hopsworks, allowing users to understand how the data has changed over time.\n",
     "\n",
     "Cached feature groups can also be stored in the online feature store (`online_enabled=True`), thus enabling low latency access to the features using the online feature store API."
    ]
